--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="../src/style.css" />
+  <link rel="stylesheet" type="text/css" href="../style.css" />
   <title>Calculo de Churrasco</title>
 </head>
 
@@ -23,7 +23,7 @@
     </div>
   </div>
 
-  <script src="../src/scripts.js"></script>
+  <script src="../scripts.js"></script>
   
 </body>
 </html>
