Modificação paleta de cores e alinhamentos de itens

--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="../style.css" />
-  <title>Calculo de Churrasco</title>
+  <title>Cálculo de Churrasco</title>
 </head>
 
 <body>
 
   <div class="container">
-    <h1>Churrasco</h1>
+    <h1>Cálculo para um bom churrasco</h1>
     <input id="adultos" name="adultos" type="number" placeholder="Adultos">
     <input id="criancas" name="criancas" type="number" placeholder="Crianças">
     <input id="duracao" name="duracao" type="number" placeholder="Duração (h)">
 
     <button class="botao" onclick="calcular()">Calcular</button>
 
-    <div id="resultado">
+    <div class="resultado "id="resultado">
   
     </div>
   </div>
